# garmin-py

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
.claude/plan/: garmin-cli.md
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-04-08-001-feat-mcp-tier1-tools-plan.md  2026-04-09-001-feat-activity-detail-flag-plan.md
garmin/: api.py  auth.py  extras.py
mcpb/: main.py  manifest.json
scripts/: build_mcpb.py
src/garmin_cli/: __init__.py  _env.py  auth.py  backend.py  cli.py  config.py  date_utils.py  exceptions.py  fueling.py  input_reader.py  mcp_auth.py  mcp_cli.py  mcp_server.py  output.py  serializers.py  token_store.py  units.py  workout_builder.py  workout_schema.py  zones.py
src/garmin_cli/commands/: _options.py  activities.py  coaching.py  devices.py  health.py  login.py  performance.py  workouts.py
src/garmin_cli/endpoints/: _base.py  activities.py  devices.py  health.py  metrics.py  performance.py  workouts.py
src/garmin_cli/mcp_tools/: __init__.py  _shared.py  activities.py  activities_write.py  coaching.py  health.py  misc.py  performance.py  training_plan.py  workouts.py
src/garmin_cli/metrics/: __init__.py  registry.py  sport_profile.py
src/garmin_cli/serializers/: __init__.py  _common.py  activities.py  devices.py  health.py  performance.py  workouts.py
src/garmin_cli/services/: __init__.py  activities.py  coaching.py  coaching_snapshot.py  performance.py  reconciliation.py  training_plan.py
tests/: conftest.py  helpers.py  test_activity_data_gaps.py  test_auth.py  test_backend.py  test_cli_lazy.py  test_config.py  test_date_utils.py  test_e2e_conftest.py  test_garmin_package.py  test_input_reader.py  test_mcp_auth.py  test_mcp_server.py  test_mcpb_build.py  test_output.py  test_packaging.py  test_serializers.py  test_serializers_fixes.py  test_token_store.py  test_workout_builder.py  test_workout_schema.py  test_zones.py
tests/e2e/: README.md  conftest.py  test_activities_e2e.py  test_coaching_e2e.py  test_health_e2e.py  test_mcp_e2e.py  test_performance_e2e.py  test_workout_crud_e2e.py  test_workouts_e2e.py
tests/test_commands/: test_activities_cmd.py  test_activity_detail_metrics_cmd.py  test_activity_metrics_describe_cmd.py  test_coaching_cmd.py  test_devices_cmd.py  test_fixes_cmd.py  test_health_cmd.py  test_login_cmd.py  test_mcp_server_cmd.py  test_new_health_commands.py  test_new_performance_commands.py  test_performance_cmd.py  test_workouts_cmd.py  test_workouts_write_cmd.py
tests/test_endpoints/: test_activities.py  test_base.py  test_fixes_endpoints.py  test_health.py  test_performance.py  test_workouts.py  test_workouts_write.py
tests/test_mcp_tools/: support.py  test_activities.py  test_activities_write.py  test_coaching.py  test_health.py  test_misc.py  test_performance.py  test_reconciliation.py  test_shared.py  test_training_plan.py  test_workouts.py
tests/test_metrics/: test_registry.py  test_sport_profile.py
tests/test_services/: test_activities_service.py  test_coaching_service.py  test_performance_service.py  test_reconciliation_service.py  test_training_plan_service.py
