[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-cli"
version = "2.1.0"
description = "CLI tool for extracting health and activity data from Garmin Connect"
requires-python = ">=3.10"
dependencies = [
    "garminconnect==0.3.2",
    "click>=8.0",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli] @ git+https://github.com/modelcontextprotocol/python-sdk.git@d5b9155f14ab3b4b203a47c55b53955b2d0bca09"]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
]

[project.scripts]
garmin-cli = "garmin_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["garmin_cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests against real Garmin Connect API",
]
