[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-py"
version = "2.7.0"
description = "CLI tool for extracting health and activity data from Garmin Connect"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "garminconnect==0.3.2",
    "click>=8.0",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=2.0.0b1,<3"]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
    "ruff>=0.4",
    "mypy>=1.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ching-kuo/garmin-py"
Repository = "https://github.com/ching-kuo/garmin-py"
Changelog = "https://github.com/ching-kuo/garmin-py/blob/main/CHANGELOG.md"

[project.scripts]
garmin-cli = "garmin_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["garmin_cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests against real Garmin Connect API",
]

[tool.ruff]
target-version = "py310"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line-too-long: many long docstrings/strings in mcp_server.py and tests; not worth mass-reformatting
    "I001",   # unsorted-imports: widespread across entire codebase; would require mass import reorg
    "UP045",  # non-pep604-annotation-optional: Optional[X] style used consistently; not changing
    "UP035",  # deprecated-import: collections.abc imports; not changing legacy typing imports
    "UP037",  # quoted-annotation: quoted annotations present; not changing
    "B904",   # raise-without-from-inside-except: intentional style in this codebase
]

[tool.ruff.lint.per-file-ignores]
"src/garmin_cli/mcp_server.py" = [
    "E402",   # mcp imports appear after WriteOutcome type alias (conditional import pattern)
]
"tests/**/*.py" = [
    "F401",   # unused imports in test files are often for re-export or fixture side-effects
]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["import-untyped"]
